Closed Bug 1151360 Opened 9 years ago Closed 9 years ago

5.1 AAC doesn't play

Categories

(Core :: Audio/Video, defect)

38 Branch
x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox37 --- unaffected
firefox38 + verified
firefox39 + verified
firefox40 + verified

People

(Reporter: jya, Assigned: jya)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

File from https://bugzilla.mozilla.org/attachment.cgi?id=8496419 (bug 1073805) doesn't play anymore.

This has regressed.
Depends on: 1073805
Plays in aurora (38.0a2)
[Tracking Requested - why for this release]: 
Regression Since Firefox 38.
It worth fixing for next ESR38.


Pushlog: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=3824a4591067&tochange=1b7d0845db2a

Regressed by: Bug 1146222 or Bug 1143491
Blocks: 1146222, 1143491
Flags: needinfo?(jyavenard)
OS: Mac OS X → All
Version: Trunk → 38 Branch
No longer blocks: 1143491
Bug 1146222 introduced a regression. the aac profile can only be 1 to 4. AAC with in-band SBR will have an extended profile set.
Attachment #8588503 - Flags: review?(karlt)
Assignee: nobody → jyavenard
Status: NEW → ASSIGNED
The regression is an unwanted consequence of an originally buggy code that was always returning true (any audio track would have been considered valid)
Flags: needinfo?(jyavenard)
As 1146222 was uplifted. This one would have to be uplifted too.
Flags: needinfo?(cpearce)
Allow extended AAC profile to play
Attachment #8588825 - Flags: review?(ajones)
Comment on attachment 8588503 [details] [diff] [review]
Allow playback of extended AAC profile audio track

askin k17e instead, as karlt doesn't appear to be available at present
Attachment #8588503 - Attachment is obsolete: true
Attachment #8588503 - Flags: review?(karlt)
Attachment #8588825 - Flags: review?(ajones) → review+
https://hg.mozilla.org/mozilla-central/rev/aa2fa3cb933b
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Jean-Yves, I think we want this to be fixed for 38. Could you fill the uplift request to aurora and beta? Thanks
Flags: needinfo?(jyavenard)
Comment on attachment 8588825 [details] [diff] [review]
Allow playback of extended AAC profile audio track

Approval Request Comment
[Feature/regressing bug #]: Bug 1151360, support 5.1 Audio
[User impact if declined]: Some AAC audio files with "extended profile" won't play
[Describe test coverage new/current, TreeHerder]: Jya has tested locally.
[Risks and why]: Seems pretty low; we'll means we'll attempt to play files that we used to play, so it should work.
[String/UUID change made/needed]: None.
Flags: needinfo?(jyavenard)
Attachment #8588825 - Flags: approval-mozilla-beta?
Attachment #8588825 - Flags: approval-mozilla-aurora?
Jya: are you able to produce an MP4A/AAC file with that hits this code path and add it to our playback tests so that we don't regress this again? Thanks.
Flags: needinfo?(jyavenard)
Flags: in-testsuite?
This isn't necessary in beta as bug 1146222 wasn't uplifted
Flags: needinfo?(jyavenard)
Attachment #8588825 - Flags: approval-mozilla-beta?
actually, bug 1146222 needs to be uplifted as code that were uplifted in beta introduced the crash fixed in 114622
Attachment #8588825 - Flags: approval-mozilla-beta?
(In reply to Jean-Yves Avenard [:jya] from comment #15)
> actually, bug 1146222 needs to be uplifted as code that were uplifted in
> beta introduced the crash fixed in 114622

bug 1146222 was uplifted to 38 when 38 was on Aurora.
Comment on attachment 8588825 [details] [diff] [review]
Allow playback of extended AAC profile audio track

Should be in 38 beta 3
Attachment #8588825 - Flags: approval-mozilla-beta?
Attachment #8588825 - Flags: approval-mozilla-beta+
Attachment #8588825 - Flags: approval-mozilla-aurora?
Attachment #8588825 - Flags: approval-mozilla-aurora+
QA Whiteboard: [good first verify]
Please don't just add extra, redundant comments to bugs.

If you guys are trying to test out bugzilla, please use https://landfill.bugzilla.org/.

This bugzilla instance here is used for real work; your extra comments cause emails to be sent to people who are watching the bug and/or the component, and they waste people's time.
Reproduced with Firefox Nightly 24.0a1 (2013-05-15) with the instruction from comment 0 and on Windows 7 x64.

Verified as fixed with Firefox Aurora 40.0a2  (Build ID: 20150526004004) 

Mozilla/5.0 (Windows NT 6.1; WOW64; rv:40.0) Gecko/20100101 Firefox/40.0
 I have reproduced  this bug with Firefox nightly (40.0a1) with the instruction from comment 0 and on Windows 7 x64.

Verified as fixed with Firefox release 38.0.1 (Build ID: 20150513174244) , latest beta  39.0 (Build ID: 20150523155636) and latest Aurora 40.0a2 (Build ID: 20150526004004)
 
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:38.0) Gecko/20100101 Firefox/38.0
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:39.0) Gecko/20100101 Firefox/39.0
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:40.0) Gecko/20100101 Firefox/40.0
QA Whiteboard: [good first verify] → [good first verify][bugday-20150527]
I reproduce the bug, 5.1 AAC didn't play on Firefox Nightly windows 8.1(32bit)

Build ID 	20150405030238
User Agent 	Mozilla/5.0 (Windows NT 6.3; rv:40.0) Gecko/20100101 Firefox/40.0

It properly played on Latest nightly 

Build ID 	20150724030210
User Agent 	Mozilla/5.0 (Windows NT 6.3; rv:42.0) Gecko/20100101 Firefox/42.0

[bugday-20150724]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: