Bug 1151360: Allow playback of extended AAC profile audio track. r=k17e, a=sledru